# hex

./: .gitignore  CLAUDE.md  index.pen  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  decisions.md  domain-model.md  product.md  releases.md  request-panel.md  response-panel.md  soap-engine.md  stack.md  testing.md  ui.md
docs/superpowers/plans/: 2026-07-01-settings-environments.md  2026-07-01-workspace-functional.md  2026-07-03-collections.md  (+8 more)
scripts/: release.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/domain/: error.rs  mod.rs  schema.rs  value.rs  wsdl.rs
src-tauri/src/engine/: connector.rs  deserialize.rs  error.rs  fault.rs  mod.rs  serialize.rs
src-tauri/src/persistence/: collection.rs
src-tauri/src/wsdl/: error.rs  mod.rs  parse.rs  resolve.rs  xsd.rs
src-tauri/src/wsdl/testdata/: calculator.wsdl  calculator12.wsdl  choice_ref.xsd  cyclic_extension.xsd  cyclic_simple_content.xsd  fallbacks.xsd  fields.xsd  inherit.xsd  rpc.wsdl  simple_content.xsd
src/components/: AddWorkspaceModal.tsx  CentralPanel.tsx  CollectionTree.test.tsx  CollectionTree.tsx  EnvSelector.tsx  ImportWsdlModal.tsx  SettingsDialog.tsx  Sidebar.tsx  Titlebar.tsx  WorkspaceSwitcher.tsx
src/lib/: api.ts  request-types.ts  response-types.ts  storage.ts
src/store/: collectionStore.ts  envStore.ts  requestStore.test.ts  requestStore.ts  responseStore.test.ts  responseStore.ts  soapForm.test.ts  soapForm.ts  workspaceStore.ts  wsdlImportStore.test.ts  wsdlImportStore.ts
(+44 files in other folders)
